# Koopman-Based-Surrogate-RBC

./: .gitignore  README.md  pyproject.toml
configs/: autoencoder.yaml  lran.yaml
configs/data/: rbc.yaml
configs/debug/: default.yaml
configs/hydra/: default.yaml
configs/hydra/callbacks/: clean_memory.yaml
configs/hydra/launcher/: local.yaml  slurm.yaml
configs/paths/: default.yaml
scripts/: eval_autoencoder.py  eval_lran.py  time_lran.py  train_autoencoder.py  train_lran.py
src/koopman_rbc/data/: __init__.py  rbc_datamodule.py  rbc_dataset.py  rbc_single_episode_datamodule.py  test_dataset.py
src/koopman_rbc/models/: __init__.py  autoencoder_module.py  koopman_control_module.py  koopman_dmd_module.py  lran_module.py  variational_autoencoder_module.py
src/koopman_rbc/models/components/: __init__.py  resnet_autoencoder.py  varational_autoencoder.py
src/koopman_rbc/utils/boilerplate/: __init__.py  clean_memory.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
src/koopman_rbc/utils/callbacks/: __init__.py  examples_callback.py  metrics_callback.py  sequence_examples_callback.py  sequence_metrics_callback.py
src/koopman_rbc/utils/metrics/: __init__.py  elbo.py  msse.py  nse.py  nsse.py  nssse.py
src/koopman_rbc/utils/metrics/functional/: __init__.py
src/koopman_rbc/utils/plot/: __init__.py  plot_base.py  plot_field.py  plot_nusselt.py  rbc_field_vis.py
src/koopman_rbc/utils/transforms/: __init__.py
sweep/: sweep_autoencoder.sh  sweep_autoencoder.yaml  sweep_lran.sh  sweep_lran.yaml
